allow user to select toppings

--- a/index.html
+++ b/index.html
@@ -11,11 +11,53 @@
   </head>
   <body>
     <form id=pizzaOptions>
+      <div class="container">
+      <p>select size</p>
       <select class="form-control" id="sizeOption">
         <option value="4">Extra Large</option>
         <option value="3">Large</option>
         <option value="2">medium</option>
         <option value="1">small</option>
+      </select>
+      <select class="form-control" id="topping1">
+        <option value="none">Choose a Topping</option>
+        <option value="Pepperoni">Pepperoni</option>
+        <option value="Sausage">Sausage</option>
+        <option value="Pineapple">Pineapple</option>
+        <option value="onions">onions</option>
+        <option value="Mushrooms">Mushrooms</option>
+        <option value="Ham">Ham</option>
+        <option value="Duck">Duck</option>
+      </select>
+      <select class="form-control" id="topping2">
+        <option value="none">Choose a Topping</option>
+        <option value="Pepperoni">Pepperoni</option>
+        <option value="Sausage">Sausage</option>
+        <option value="Pineapple">Pineapple</option>
+        <option value="onions">onions</option>
+        <option value="Mushrooms">Mushrooms</option>
+        <option value="Ham">Ham</option>
+        <option value="Duck">Duck</option>
+      </select>
+      <select class="form-control" id="topping3">
+        <option value="none">Choose a Topping</option>
+        <option value="Pepperoni">Pepperoni</option>
+        <option value="Sausage">Sausage</option>
+        <option value="Pineapple">Pineapple</option>
+        <option value="onions">onions</option>
+        <option value="Mushrooms">Mushrooms</option>
+        <option value="Ham">Ham</option>
+        <option value="Duck">Duck</option>
+      </select>
+      <select class="form-control" id="topping4">
+        <option value="none">Choose a Topping</option>
+        <option value="Pepperoni">Pepperoni</option>
+        <option value="Sausage">Sausage</option>
+        <option value="Pineapple">Pineapple</option>
+        <option value="onions">onions</option>
+        <option value="Mushrooms">Mushrooms</option>
+        <option value="Ham">Ham</option>
+        <option value="Duck">Duck</option>
       </select>
       <button type="submit" class="btn btn-default" id="submit">Submit</button>
 
