create prototype to display size and toppings

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <div class="container">
       <p>select size</p>
       <select class="form-control" id="sizeOption">
-        <option value="4">Extra Large</option>
-        <option value="3">Large</option>
-        <option value="2">medium</option>
-        <option value="1">small</option>
+        <option value="3">Extra Large</option>
+        <option value="2">Large</option>
+        <option value="1">medium</option>
+        <option value="0">small</option>
       </select>
       <select class="form-control" id="topping1">
         <option value="none">Choose a Topping</option>
@@ -60,7 +60,14 @@
         <option value="Duck">Duck</option>
       </select>
       <button type="submit" class="btn btn-default" id="submit">Submit</button>
-
     </form>
+    <div>
+      <div id="displayPizza">
+
+      </div>
+      <div id="price">
+
+      </div>
+    </div>
   </body>
 </html>
