display price of pizza based on size and toppings

--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
     <title>Pizza</title>
   </head>
   <body>
+      <h1>PIZZA PLACE</h1>
     <form id=pizzaOptions>
-      <div class="container">
       <p>select size</p>
       <select class="form-control" id="sizeOption">
-        <option value="3">Extra Large</option>
-        <option value="2">Large</option>
-        <option value="1">medium</option>
-        <option value="0">small</option>
+        <option value="3">Extra Large $16</option>
+        <option value="2">Large $14</option>
+        <option value="1">medium $12</option>
+        <option value="0">small $10</option>
       </select>
+      <p>
+        TOPPINGS $1.50 Each.
+      </p>
       <select class="form-control" id="topping1">
         <option value="none">Choose a Topping</option>
         <option value="Pepperoni">Pepperoni</option>
@@ -65,9 +68,7 @@
       <div id="displayPizza">
 
       </div>
-      <div id="price">
 
-      </div>
     </div>
   </body>
 </html>
