add running total, styling

--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
       <button type="submit" class="btn btn-default" id="submit">Submit</button>
     </form>
     <div>
-      <div id="displayPizza">
+      <ol id="displayPizza">
 
-      </div>
+      </ol>
+    <p>TOTAL ORDER PRICE</p>
+    <div id="totalPrice">
+    </div>
 
     </div>
   </body>
