clean up code and add styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Pizza</title>
   </head>
   <body>
-      <h1>PIZZA PLACE</h1>
+    <h1 class = "jumbotron">PIZZA ORDER</h1>
     <form id=pizzaOptions>
       <p>select size</p>
       <select class="form-control" id="sizeOption">
@@ -19,9 +19,7 @@
         <option value="1">medium $12</option>
         <option value="0">small $10</option>
       </select>
-      <p>
-        TOPPINGS $1.50 Each.
-      </p>
+      <p>TOPPINGS $2.00 Each.</p>
       <select class="form-control" id="topping1">
         <option value="none">Choose a Topping</option>
         <option value="Pepperoni">Pepperoni</option>
@@ -66,12 +64,10 @@
     </form>
     <div>
       <ol id="displayPizza">
-
       </ol>
+    </div>
     <p>TOTAL ORDER PRICE</p>
     <div id="totalPrice">
-    </div>
-
     </div>
   </body>
 </html>
